--- a/ShinySuccotash.csproj
+++ b/ShinySuccotash.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <RootNamespace>shiny_succotash</RootNamespace>
+    <RootNamespace>ShinySuccotash</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
